# BackgroundRemover

./: AlgoInterface.cpp  AlgoInterface.h  AlgoWindow.qml  BgRemoverTask.cpp  BgRemoverTask.h  ButtonWithFolderSelection.qml  CMakeLists.txt  CMakeLists.txt.user.6cf8556  FileDialog.qml  Fwd.h  MetaTypeRegistrator.cpp  MetaTypeRegistrator.h  PreviewImages.cpp  PreviewImages.h  PreviewImages.qml  RmBgMethods.h  Utils.cpp  Utils.h  main.cpp  main.qml  qml.qrc
src/model/: BgRemover.cpp  BgRemover.h  BgRemoverSettings.h  Bgsegm.cpp  Bgsegm.h  CMakeLists.txt  Dbscan.cpp  Dbscan.h  DisModelWorker.cpp  DisModelWorker.h  KMeans.cpp  KMeans.h  MaskEditor.cpp  MaskEditor.h  MlRemover.cpp  MlRemover.h  ModelWorker.cpp  ModelWorker.h  Ohlander.cpp  Ohlander.h  SubsctructionSettings.h  Substruction.cpp  Substruction.h  SubstructionSettings.h  U2ModelWorker.cpp  U2ModelWorker.h
src/view/: CMakeLists.txt
src/viewmodel/: CMakeLists.txt
